[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/GUI.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
modulate = Color( 1, 0.654902, 0, 1 )
margin_left = 19.0
margin_top = 561.0
margin_right = 76.0
margin_bottom = 575.0
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -63.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Adventure_Tower_01" type="TextureButton" parent="HBoxContainer"]
margin_left = 446.0
margin_right = 510.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )

[node name="Adventure_House_01" type="TextureButton" parent="HBoxContainer"]
modulate = Color( 0.647059, 0.372549, 0.372549, 1 )
margin_left = 514.0
margin_right = 578.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="HBoxContainer/Adventure_Tower_01" to="." method="_on_Adventure_Tower_01_pressed"]
[connection signal="pressed" from="HBoxContainer/Adventure_House_01" to="." method="_on_Adventure_House_01_pressed"]
